@@ -4,12 +4,14 @@ import org.grp8.swp391.entity.User;
 import org.grp8.swp391.repository.UserRepo;
 import org.grp8.swp391.service.UserService;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Component;
 
 import java.util.Collections;
+import java.util.List;
 
 @Component
 public class UserDetailService implements UserDetailsService {
@@ -23,8 +25,12 @@ public class UserDetailService implements UserDetailsService {
         if(u==null){
             throw new UsernameNotFoundException("User not found" + email);
         }
+        String role = u.getRole() != null ? u.getRole().getRoleName() : "USER";
 
-        return org.springframework.security.core.userdetails.User.withUsername(u.getUserEmail()).password(u.getUserPassword()).authorities(Collections.emptyList()).build();
-
+        return new org.springframework.security.core.userdetails.User(
+                u.getUserEmail(),
+                u.getUserPassword(),
+                List.of(new SimpleGrantedAuthority(role))
+        );
     }
 }
